--- a/style.css
+++ b/style.css
@@ -161,9 +161,32 @@ box-shadow: 10px 10px 54px rgba(0, 0, 0, 0.03) ;
     background-color: #fddde4;
 
 }
+#feature .fe-box img{
+    width : 100%;
+    margin-bottom: 10px;
+}
+
 #feature {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+#feature .fe-box:nth-child(1)h6{
+background-color: #fddde4;
+}
+#feature .fe-box :nth-child(2)h6{
+background-color: #cdebbc;
+}
+#feature .fe-box:nth-child(3)h6{
+background-color: #bddfee;
+} 
+#feature .fe-box:nth-child(4) h6 {
+background-color: #cdd4f8;
+}
+#feature .fe-box:nth-child(5)h6{
+background-color: #f6dbf6;
+}
+#feature .fe-box :nth-child(6)h6{
+background-color: #fff2e5;
 }
