--- a/style.css
+++ b/style.css
@@ -190,3 +190,9 @@ background-color: #f6dbf6;
 #feature .fe-box :nth-child(6)h6{
 background-color: #fff2e5;
 }
+
+/* commit changes */
+#feature .fe-box :nth-child(6)h6{
+background-color: #fff2e5;
+}
+
