--- a/style.css
+++ b/style.css
@@ -195,4 +195,7 @@ background-color: #fff2e5;
 #feature .fe-box :nth-child(6)h6{
 background-color: #fff2e5;
 }
+/*   */
+#feature .fe-box :nth-child(6)h6{
+background-color: #fff2e5;}
 
